--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "build-apk": "cd android && gradlew assembleRelease && cd ..",
+    "dev": "yarn apk-remove && yarn start",
+    "gclean": "cd android && gradlew clean && cd ..",
     "ios": "react-native run-ios",
+    "key": "adb shell input keyevent 82",
+    "rr": "adb shell input text \"RR\"",
     "start": "react-native start",
+    "sdev": "yarn gclean && yarn dev",
     "test": "jest",
     "lint": "eslint ."
   },
